# challenge-mercado-livre-ae

exercise-01/source/API_Download_DS2_en_csv_v2_29308/: Metadata_Country_API_Download_DS2_en_csv_v2_29308.csv  Metadata_Indicator_API_Download_DS2_en_csv_v2_29308.csv
exercise-01/tableau/: Challenge - World Data Bank Mercosul.twbx
exercise-02/: 01-database-and-tables-ecommerce.sql  02-insert-tables-ecommerce copy.sql  03-question-01.sql  03-question-02.sql  03-question-03.sql  create_tables.sql  respuestas_negocio.sql
exercise-03/test-fast-api/fast_api_challenge-ml-ae/: .gitignore  pyproject.toml
exercise-03/test-fast-api/fast_api_challenge-ml-ae/src/fast_api_challenge_ml_ae/: app.py
